--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,3 +1,12 @@
-// Place all the styles related to the tasks controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+
+.new_sign{
+  padding: 20px 5%;
+}
+
+.index {
+  padding: 20px 5%;
+}
+
+.edit {
+  display: block;
+}
