--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,9 +1,11 @@
 h1 タスク一覧
-div
+.new_sign
   = link_to "新規登録", new_task_path
 
 - @tasks.each do |task|
-  .div
+  .index
     = link_to task.name, task
     = task.created_at
-    = link_to "編集", edit_task_path(task)
+    / 下記の（task）について どの「task」についての編集画面かを設定している
+    = link_to "編集", edit_task_path(task), class: "edit"
+    = link_to "削除", task, method: :delete, data: {confirm: "タスク #{task.name} 削除しますか？"}
