--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -1,2 +1,18 @@
-h1 Admin::Users#index
-p Find me in app/views/admin/users/index.html.slim
+h1 ユーザー一覧
+
+= link_to "新規登録", new_admin_user_path
+
+- @users.each do |user|
+  .index
+    = link_to user.name, admin_user_path(user)
+  .index
+    = user.email
+  .index
+    = user.admin? ? "あり" : "なし"
+  .index
+    = user.created_at
+  .index
+    = user.updated_at
+  .index
+    = link_to "編集", edit_admin_user_path(user)
+    = link_to "削除", admin_user_path(user), method: :delete, data: {confirm: "本当に削除しますか？"}
