--- a/app/views/admin/users/new.html.slim
+++ b/app/views/admin/users/new.html.slim
@@ -1,20 +1,3 @@
 h1 新規登録
 
-= form_with model: [:admin, @user], local: true do |f|
-  div
-    = f.label :name, "名前"
-    = f.text_field :name
-  div
-    = f.label :email, "メールアドレス"
-    = f.text_field :email
-  div
-    = f.label :admin
-    = f.check_box :admin
-    | 管理者権限
-  div
-    = f.label :password, "パスワード"
-    = f.password_field :password
-  div
-    = f.label :password_confirmation, "パスワード再確認"
-    = f.password_field :password_confirmation
-  = f.submit "登録"
+= render partial: "form", locals: {user: @user}
